# digital-life-narrative-ai

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  MULTIMODAL_ARCHITECTURE.md  Makefile  PRIVACY.md  README.md  SECURITY.md  auto_test_ai.py  check_timeline.py  cli_error.txt  demo_audit_log.json  demo_memory.py  demo_privacy.py  final_life_story.html  final_polished_report.html  find_working_model.py  list_models.py  photography_v4.html  pyproject.toml  pytest_debug_output.txt  pytest_memory_output.txt  pytest_models_output.txt  pytest_output.txt  reproduce_geo.py  test_ai_diagnostics.py  test_debug_output.txt  test_err.txt  test_models_connectivity.py  test_new_sdk.py  test_output.txt  test_output_2.txt  test_output_3.txt  test_output_cmd.txt  test_results.txt  (+8 more)
.github/workflows/: ci.yml  release.yml
_legacy_organizer_DISABLED/: __main__.py  cli.py  config.py  models.py  report.py
_legacy_organizer_DISABLED/ai/: cache.py  life_analyzer.py  usage_tracker.py
_legacy_organizer_DISABLED/parsers/: base.py  (+4 more)
demo/: DEMO.md  generate_demo_data.py
docs/: EXPORT_PREPARATION.md  HACKATHON_SUBMISSION.md  JUDGES_QUICKSTART.md  USER_GUIDE.md
organizer/: __init__.py  cli.py  config.py  detection.py  models.py  organizer.py  report.py
scripts/: run_demo.sh
src/: __init__.py  config.py  detection.py
tests/: conftest.py  test_ai.py  test_ai_and_safety.py  test_cli.py  test_cli_and_report.py  test_core_models.py  test_detection_and_parsers.py  test_memory.py  test_models.py  test_parsers.py  test_src_ai_client.py
(+75 files in other folders)
